# bubble

./: .gitignore  README.md  audio_clipper.py  example_usage.py  f5tts.py  latest_title.json  main.py  melody_generator.py  podcast_llm.py  pyproject.toml  rss_reader.py  slack.py  test.py  video_clipper.py  waveform.py  youtube_uploader.py
data/background/: 'FEARFUL' Investigation Tension Suspense Thriller Mystical Music No Copyright⧸ Investigation Music [vmS9PIlkQLU].webm  (No Copyright)Best Dark Horror Scary Background Music- Royalty Free and Non Copyrighted [wV_LKmJRQEc].webm  (No Copyright)Crime Murder Suspense Dark Horror Background Music⧸Tension Mystery & Mysterious Music [-6Y6WaNhw9A].webm  (No Copyright)Dark Suspense Mystery Thriller Horror Background Music⧸Tension Investigation Music [X5pJNnk1-N0].webm  (No Copyright)Dark Tension Mysterious Suspense Background Music⧸Mystery Investigation Thriller Music [77ZUmmfcXZ4].webm  (No Copyright)Suspense Dark Mystery Thriller Background Music⧸Investigation Mysterious Tension Music [n9ef0b2D-8k].webm  (No Copyright)Suspense Mystery Dark Thriller Background Music⧸Investigation Tension Mysterious Music [RgfJTeLfhIk].webm  Best Suspense Music No Copyright(Suspense Background Music) Royalty Free Dark Tension Mystery Music [w55V-_arUDw].webm  Crime Investigation Dark Music No Copyright - Tension Suspense Mystery Background Music No Copyright [-vzbqWW7Ny0].webm  Crime Investigation Dark Music No Copyright - Tension Suspense Mystery Background Music No Copyright [KTiVMlowm1Q].webm  (+34 more)
docs/: youtube_setup.md
